--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "mysql": "^2.18.1",
-    "stripe": "^16.2.0"
+    "mysql": "^2.18.1"
   }
 }
